# generative-dialogue-system

./: .gitignore  LICENSE  README.md  alembic.ini  main.py  pyproject.toml  pytest.ini  requirements.txt
alembic/: env.py
alembic/versions/: 96e515cb1f88_initial_migration_users_conversations_.py
docker/: .env.example  docker-compose.yml
docs/: env_variables_reference.md  error_codes.md  uv_setup_and_usage.md
docs/Testing in Python/: 1_introduction.py  2_benefits_of_automated_testing.py  3_pytest_vs_unittest.py
docs/Testing in Python/Pytest/: 1_Introduction.py  2_pytest_fixtures.py  3_faker.py  4_pytest_markers.py
src/: main.py
src/app/: .env.example  config.py  main.py
src/app/api/v1/: error_handlers.py
src/app/config/: settings.py
src/app/core/: dependencies.py
src/app/core/logging/: __init__.py  abc.py  builder.py  filters.py  formatters.py  handlers.py  middleware.py
src/app/database/: base.py
src/app/db/: base.py  session.py
src/app/exceptions/: __init__.py  base.py  integrity_classifier.py  mapper.py  validators.py
src/app/models/: __init__.py  conversation.py  message.py  user.py
src/app/repositories/: __init__.py  base.py  base_repository.py  conversation_repository.py  message_repository.py  user_repository.py
src/app/services/: auth_service.py  conversation_service.py  message_service.py  user_service.py
src/app/tests/: __init__.py  conftest.py
src/app/tests/test_fixtures/: repository_fixtures.py
src/app/utils/: jwt.py  logging.py  security.py
src/app/validators/: config_validators.py  exception_validators.py
(+9 files in other folders)
