[project]
name = "generative-dialogue-system"
version = "0.1.0"
description = "A FastAPI-based generative dialogue system using OpenAI's API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic==1.16.5",
    "factory-boy==3.3.3",
    "faker==37.8.0",
    "fastapi[standard]==0.116.1",
    "ipykernel==6.30.1",
    "openai==1.107.1",
    "psycopg[binary]==3.2.10",
    "pydantic-settings==2.10.1",
    "pytest==8.4.2",
    "pytest-asyncio==1.2.0",
    "sqlalchemy==2.0.43",
    "tomli==2.2.1",
    "uvicorn[standard]==0.35.0",
]

